[project]
name = "ctrlbench"
version = "0.1.0"
description = "Python toolkit for simulating, capturing, and analyzing PID controller behavior."
readme = "README.md"
authors = [{ name = "Dylan Parks", email = "dylan@bouwerbytes.com" }]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
